--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
+    compile files('libs/AMap_Location_V3.1.0_20161027.jar')
+    compile files('libs/AMap_Search_V3.6.1_20161122.jar')
+    compile 'com.android.support:recyclerview-v7:24.2.1'
 }
