添加调试入口

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,8 +54,10 @@
         <!-- 定位需要的服务 使用2.0的定位需要加上这个 -->
         <service android:name="com.amap.api.location.APSService"></service>
 
-        <activity android:name=".photos.SelectPhotosActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".photos.SelectPhotosActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".location.LocationActivity" />
     </application>
 
 </manifest>
