--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile files('libs/AMap_Search_V3.6.1_20161122.jar')
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    compile 'com.zhy:base-rvadapter:3.0.3'
 }
