--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
             android:screenOrientation="portrait" />
         <activity android:name=".location.LocationActivity" />
         <activity android:name=".location.SearchLocationActivity"/>
+        <activity android:name=".zone.ZoneActivity"/>
     </application>
 
 </manifest>
